[project]
name = "clawdchat"
version = "0.0.2"
description = "A minimum AI-powered Telegram bot using Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0.0",
    "claude-agent-sdk",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
